--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
             line-height: 1.6;
             overflow-x: hidden;
             transition: all 0.3s ease;
+            width: 100%;
+            max-width: 100vw;
+        }
+
+        html {
+            overflow-x: hidden;
+            width: 100%;
+            max-width: 100vw;
+        }
+
+        * {
+            max-width: 100%;
         }
 
         /* Enhanced animated background */
@@ -238,6 +250,8 @@
             max-width: 900px;
             padding: 0 50px;
             animation: fadeInUp 1.2s ease;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         @keyframes fadeInUp {
@@ -276,7 +290,7 @@
             font-size: 1.2rem;
             color: var(--text-muted);
             margin-bottom: 45px;
-            max-width: 700px;
+            max-width: 600px;
             margin-left: auto;
             margin-right: auto;
             animation: fadeInUp 1.2s ease 0.6s both;
@@ -1130,6 +1144,31 @@
 
             .hero-content {
                 padding: 0 20px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                width: 100%;
+                max-width: 100vw;
+                margin: 0 auto;
+                box-sizing: border-box;
+                overflow: hidden;
+            }
+
+            .hero-content img {
+                max-width: 90%;
+                height: auto;
+                margin: 60px auto 0;
+                object-fit: contain;
+            }
+
+            .hero-content .subtitle,
+            .hero-content .description,
+            .hero-content .cta-button {
+                max-width: 100%;
+                word-wrap: break-word;
+                overflow-wrap: break-word;
             }
 
             .section {
@@ -1589,13 +1628,13 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <!-- <img src="Assets/2.png" alt="Logo Dark" class="logo-dark" style="height:600px;width:auto;vertical-align:middle;margin-top: 30px;margin-bottom: -200px;"> -->
-            <img src="Assets/m3.png" alt="Logo Light" class="logo-light" style="height:600px;width:auto;vertical-align:middle;margin-top: 100px;margin-bottom: -200px;">
+            <img src="Assets/m3.png" alt="Logo Dark" class="logo-dark" style="height:600px;width:auto;vertical-align:middle;margin-bottom: -200px;">
+            <img src="Assets/2.png" alt="Logo Light" class="logo-light" style="height:600px;width:auto;vertical-align:middle;margin-bottom: -200px;display:none;">
             <style>
-                /* [data-theme="dark"] .logo-dark { display: inline !important; }
-                [data-theme="dark"] .logo-light { display: none !important; }
-                [data-theme="light"] .logo-dark { display: none !important; }
-                [data-theme="light"] .logo-light { display: inline !important; } */
+                [data-theme="dark"] .logo-dark { display: none !important; }
+                [data-theme="dark"] .logo-light { display: inline !important; }
+                [data-theme="light"] .logo-dark { display: inline !important; }
+                [data-theme="light"] .logo-light { display: none !important; }
               </style>
             <!-- <img src="Assets/2.png" alt="Mahmoud Elmahdy"alt="Logo" style="height:600px;width:auto;vertical-align:middle;margin-top: 100px;margin-bottom: -200px;">  -->
             <!-- <h1>Mahmoud Elmahdy</h1> -->
