--- a/index.html
+++ b/index.html
@@ -2118,7 +2118,7 @@
     <nav id="navbar">
         <div class="nav-container">
                 <div class="logo">
-                    <p style="font-size: medium;">Mahmoud Elmahdy</p>
+                    <p style="font-size: medium;">ME</p>
 </div>
 
                 <div class="menu-icon">&#9776;</div>
