--- a/projects.html
+++ b/projects.html
@@ -626,6 +626,7 @@
             align-items: center;
             box-shadow: 0 25px 50px rgba(0, 0, 0, 0.3);
             border: 1px solid rgba(255, 255, 255, 0.1);
+            z-index: 2002;
         }
 
         .modal-image {
@@ -748,6 +749,23 @@
             stroke-width: 2 !important;
             stroke-linecap: round !important;
             stroke-linejoin: round !important;
+        }
+
+        .nav-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background: rgba(0,0,0,0.25);
+            z-index: 1099;
+            transition: opacity 0.3s;
+        }
+
+        .nav-links.active ~ .nav-overlay,
+        .nav-overlay.active {
+            display: block;
         }
 
     </style>
@@ -1069,6 +1087,28 @@
                 navOverlay.classList.remove('active');
             }
         });
+        // Enhanced smooth scrolling
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
+        });
+        // Enhanced navigation background on scroll
+        window.addEventListener('scroll', () => {
+            const navbar = document.getElementById('navbar');
+            if (window.scrollY > 100) {
+                navbar.classList.add('scrolled');
+            } else {
+                navbar.classList.remove('scrolled');
+            }
+        });
 
         // Image Gallery Modal Functions
         let currentImageIndex = 0;
@@ -1177,6 +1217,16 @@
                     });
                 });
             });
+
+            // Add click event to modal background to close when clicking outside content
+            const modal = document.getElementById('imageModal');
+            if (modal) {
+                modal.addEventListener('click', (e) => {
+                    if (e.target === modal) {
+                        closeGallery();
+                    }
+                });
+            }
         });
     </script>
 </body>
